// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateEslintConfig Generator Mode React should return a Vue configuration 1`] = `
Object {
  "env": Object {},
  "extends": Array [
    "eslint:recommended",
    "plugin:vue/essential",
  ],
  "parserOptions": Object {
    "parser": "babel-eslint",
  },
  "plugins": Array [
    "import",
  ],
  "root": true,
  "rules": Object {
    "complexity": Array [
      "error",
      8,
    ],
    "curly": Array [
      "error",
      "all",
    ],
    "eqeqeq": Array [
      "error",
      "smart",
    ],
    "import/no-extraneous-dependencies": Array [
      "error",
      Object {
        "devDependencies": true,
        "optionalDependencies": false,
        "peerDependencies": false,
      },
    ],
    "import/order": Array [
      "error",
      Object {
        "groups": Array [
          Array [
            "external",
            "builtin",
          ],
          "internal",
          Array [
            "parent",
            "sibling",
            "index",
          ],
        ],
      },
    ],
    "no-console": "off",
    "no-debugger": "off",
    "no-shadow": Array [
      "error",
      Object {
        "hoist": "all",
      },
    ],
    "prefer-const": "error",
    "sort-imports": Array [
      "error",
      Object {
        "ignoreCase": true,
        "ignoreDeclarationSort": true,
        "ignoreMemberSort": false,
        "memberSyntaxSortOrder": Array [
          "none",
          "all",
          "multiple",
          "single",
        ],
      },
    ],
  },
}
`;

exports[`generateEslintConfig Generator Mode React should return a Vue configuration with prettier formatter 1`] = `
Object {
  "env": Object {},
  "extends": Array [
    "eslint:recommended",
    "plugin:vue/essential",
    "plugin:prettier/recommended",
    "prettier/vue",
  ],
  "parserOptions": Object {
    "parser": "babel-eslint",
  },
  "plugins": Array [
    "import",
  ],
  "root": true,
  "rules": Object {
    "complexity": Array [
      "error",
      8,
    ],
    "curly": Array [
      "error",
      "all",
    ],
    "eqeqeq": Array [
      "error",
      "smart",
    ],
    "import/no-extraneous-dependencies": Array [
      "error",
      Object {
        "devDependencies": true,
        "optionalDependencies": false,
        "peerDependencies": false,
      },
    ],
    "import/order": Array [
      "error",
      Object {
        "groups": Array [
          Array [
            "external",
            "builtin",
          ],
          "internal",
          Array [
            "parent",
            "sibling",
            "index",
          ],
        ],
      },
    ],
    "no-console": "off",
    "no-debugger": "off",
    "no-shadow": Array [
      "error",
      Object {
        "hoist": "all",
      },
    ],
    "prefer-const": "error",
    "sort-imports": Array [
      "error",
      Object {
        "ignoreCase": true,
        "ignoreDeclarationSort": true,
        "ignoreMemberSort": false,
        "memberSyntaxSortOrder": Array [
          "none",
          "all",
          "multiple",
          "single",
        ],
      },
    ],
  },
}
`;

exports[`generateEslintConfig Generator Mode React should return a react configuration 1`] = `
Object {
  "env": Object {},
  "extends": Array [
    "eslint:recommended",
    "react-app",
    "plugin:jsx-a11y/recommended",
  ],
  "parserOptions": Object {},
  "plugins": Array [
    "import",
    "jsx-a11y",
  ],
  "root": true,
  "rules": Object {
    "complexity": Array [
      "error",
      8,
    ],
    "curly": Array [
      "error",
      "all",
    ],
    "eqeqeq": Array [
      "error",
      "smart",
    ],
    "import/no-extraneous-dependencies": Array [
      "error",
      Object {
        "devDependencies": true,
        "optionalDependencies": false,
        "peerDependencies": false,
      },
    ],
    "import/order": Array [
      "error",
      Object {
        "groups": Array [
          Array [
            "external",
            "builtin",
          ],
          "internal",
          Array [
            "parent",
            "sibling",
            "index",
          ],
        ],
      },
    ],
    "no-shadow": Array [
      "error",
      Object {
        "hoist": "all",
      },
    ],
    "prefer-const": "error",
    "react-hooks/exhaustive-deps": "warn",
    "react-hooks/rules-of-hooks": "error",
    "react/no-string-refs": "warn",
    "sort-imports": Array [
      "error",
      Object {
        "ignoreCase": true,
        "ignoreDeclarationSort": true,
        "ignoreMemberSort": false,
        "memberSyntaxSortOrder": Array [
          "none",
          "all",
          "multiple",
          "single",
        ],
      },
    ],
  },
  "settings": Object {
    "react": Object {
      "version": "detect",
    },
  },
}
`;

exports[`generateEslintConfig Generator Mode React should return a react configuration with prettier formatter 1`] = `
Object {
  "env": Object {},
  "extends": Array [
    "eslint:recommended",
    "react-app",
    "plugin:jsx-a11y/recommended",
    "plugin:prettier/recommended",
    "prettier/react",
  ],
  "parserOptions": Object {},
  "plugins": Array [
    "import",
    "jsx-a11y",
  ],
  "root": true,
  "rules": Object {
    "complexity": Array [
      "error",
      8,
    ],
    "curly": Array [
      "error",
      "all",
    ],
    "eqeqeq": Array [
      "error",
      "smart",
    ],
    "import/no-extraneous-dependencies": Array [
      "error",
      Object {
        "devDependencies": true,
        "optionalDependencies": false,
        "peerDependencies": false,
      },
    ],
    "import/order": Array [
      "error",
      Object {
        "groups": Array [
          Array [
            "external",
            "builtin",
          ],
          "internal",
          Array [
            "parent",
            "sibling",
            "index",
          ],
        ],
      },
    ],
    "no-shadow": Array [
      "error",
      Object {
        "hoist": "all",
      },
    ],
    "prefer-const": "error",
    "react-hooks/exhaustive-deps": "warn",
    "react-hooks/rules-of-hooks": "error",
    "react/no-string-refs": "warn",
    "sort-imports": Array [
      "error",
      Object {
        "ignoreCase": true,
        "ignoreDeclarationSort": true,
        "ignoreMemberSort": false,
        "memberSyntaxSortOrder": Array [
          "none",
          "all",
          "multiple",
          "single",
        ],
      },
    ],
  },
  "settings": Object {
    "react": Object {
      "version": "detect",
    },
  },
}
`;

exports[`generateEslintConfig Generator Mode TypeScript should return a TS configuration with prettier formatter 1`] = `
Object {
  "env": Object {},
  "extends": Array [
    "eslint:recommended",
    "plugin:@typescript-eslint/recommended",
    "plugin:@typescript-eslint/recommended-requiring-type-checking",
    "plugin:prettier/recommended",
    "prettier/@typescript-eslint",
  ],
  "parser": "@typescript-eslint/parser",
  "parserOptions": Object {
    "project": "tsconfig.json",
  },
  "plugins": Array [
    "import",
  ],
  "root": true,
  "rules": Object {
    "@typescript-eslint/prefer-nullish-coalescing": "error",
    "@typescript-eslint/prefer-optional-chain": "error",
    "@typescript-eslint/strict-boolean-expressions": "error",
    "complexity": Array [
      "error",
      8,
    ],
    "curly": Array [
      "error",
      "all",
    ],
    "eqeqeq": Array [
      "error",
      "smart",
    ],
    "import/no-extraneous-dependencies": Array [
      "error",
      Object {
        "devDependencies": true,
        "optionalDependencies": false,
        "peerDependencies": false,
      },
    ],
    "import/order": Array [
      "error",
      Object {
        "groups": Array [
          Array [
            "external",
            "builtin",
          ],
          "internal",
          Array [
            "parent",
            "sibling",
            "index",
          ],
        ],
      },
    ],
    "no-shadow": Array [
      "error",
      Object {
        "hoist": "all",
      },
    ],
    "prefer-const": "error",
    "sort-imports": Array [
      "error",
      Object {
        "ignoreCase": true,
        "ignoreDeclarationSort": true,
        "ignoreMemberSort": false,
        "memberSyntaxSortOrder": Array [
          "none",
          "all",
          "multiple",
          "single",
        ],
      },
    ],
  },
}
`;

exports[`generateEslintConfig Generator Mode TypeScript should return a TS configuration with type checking 1`] = `
Object {
  "env": Object {},
  "extends": Array [
    "eslint:recommended",
    "plugin:@typescript-eslint/recommended",
    "plugin:@typescript-eslint/recommended-requiring-type-checking",
  ],
  "parser": "@typescript-eslint/parser",
  "parserOptions": Object {
    "project": "tsconfig.json",
  },
  "plugins": Array [
    "import",
  ],
  "root": true,
  "rules": Object {
    "@typescript-eslint/prefer-nullish-coalescing": "error",
    "@typescript-eslint/prefer-optional-chain": "error",
    "@typescript-eslint/strict-boolean-expressions": "error",
    "complexity": Array [
      "error",
      8,
    ],
    "curly": Array [
      "error",
      "all",
    ],
    "eqeqeq": Array [
      "error",
      "smart",
    ],
    "import/no-extraneous-dependencies": Array [
      "error",
      Object {
        "devDependencies": true,
        "optionalDependencies": false,
        "peerDependencies": false,
      },
    ],
    "import/order": Array [
      "error",
      Object {
        "groups": Array [
          Array [
            "external",
            "builtin",
          ],
          "internal",
          Array [
            "parent",
            "sibling",
            "index",
          ],
        ],
      },
    ],
    "no-shadow": Array [
      "error",
      Object {
        "hoist": "all",
      },
    ],
    "prefer-const": "error",
    "sort-imports": Array [
      "error",
      Object {
        "ignoreCase": true,
        "ignoreDeclarationSort": true,
        "ignoreMemberSort": false,
        "memberSyntaxSortOrder": Array [
          "none",
          "all",
          "multiple",
          "single",
        ],
      },
    ],
  },
}
`;

exports[`generateEslintConfig Generator Mode TypeScript should return a TS configuration without type checking 1`] = `
Object {
  "env": Object {},
  "extends": Array [
    "eslint:recommended",
    "plugin:@typescript-eslint/recommended",
  ],
  "parser": "@typescript-eslint/parser",
  "parserOptions": Object {
    "project": "tsconfig.json",
  },
  "plugins": Array [
    "import",
  ],
  "root": true,
  "rules": Object {
    "@typescript-eslint/prefer-optional-chain": "error",
    "complexity": Array [
      "error",
      8,
    ],
    "curly": Array [
      "error",
      "all",
    ],
    "eqeqeq": Array [
      "error",
      "smart",
    ],
    "import/no-extraneous-dependencies": Array [
      "error",
      Object {
        "devDependencies": true,
        "optionalDependencies": false,
        "peerDependencies": false,
      },
    ],
    "import/order": Array [
      "error",
      Object {
        "groups": Array [
          Array [
            "external",
            "builtin",
          ],
          "internal",
          Array [
            "parent",
            "sibling",
            "index",
          ],
        ],
      },
    ],
    "no-shadow": Array [
      "error",
      Object {
        "hoist": "all",
      },
    ],
    "prefer-const": "error",
    "sort-imports": Array [
      "error",
      Object {
        "ignoreCase": true,
        "ignoreDeclarationSort": true,
        "ignoreMemberSort": false,
        "memberSyntaxSortOrder": Array [
          "none",
          "all",
          "multiple",
          "single",
        ],
      },
    ],
  },
}
`;
